# engine

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: CMakeLists.txt
assets/shaders/: backpack.vert  light.vert  model.frag  model.vert  simple.frag  simple.vert
engine/: CMakeLists.txt
engine/core/: application.cpp  application.hpp  scene.hpp  scene_backpack.cpp  scene_backpack.hpp  scene_load_testing.cpp  scene_load_testing.hpp
engine/helpers/: log.hpp
engine/render/: camera.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
engine/render/camera/: camera.hpp  camera_perspective.cpp  camera_perspective.hpp
engine/resources/: fileloader.cpp  fileloader.hpp  manager.hpp  registry.hpp
engine/resources/loaders/: all.hpp  auto_loader.hpp  iloader.hpp  loader.hpp  obj_loader.cpp  obj_loader.hpp
src/: CMakeLists.txt  main.cpp
